# ZHONGSHAN-AI

./: .gitignore  AI.service  DEPENDENCY_FIX_SUMMARY.md  DEPENDENCY_GUIDE.md  README.md  all_uid_configs.yaml  get_data.py  get_data_test.py  main.py  main_v2.py  main_v3.py  main_v3_test.py  mock_data_generator.py  model.py  pyproject.toml  requirements-simple.txt  requirements.txt  requirements_full.txt  requirements_v1.txt  requirements_v2.txt  test_mainv1.py  test_mainv2_only_optimization.ipynb  test_mainv3_only_optimization.ipynb  test_optimization_8.28.ipynb  verify_dependencies.py  version_test.py
Model_Manager/: __init__.py  model_manager.py
OptimizationAlgorithm_Manager/: __init__.py  oa_manager.py
Optimization_Algorithm/: OA_basic.py  __init__.py  bayes.py  classic_oa.py  custom_oa.py  custom_oa_V2.py  drl_oa.py  drl_utils.py
Optimization_Algorithm/dc_env/: __init__.py  data_center_env.py
Temperature_Event/: TemperatureEvent.py
config/: PUE_config.yaml  configs.yaml  configs_test.yaml  model_args.yaml  oa_args.yaml  oa_args_test.yaml
model/: Bayes.pth  GRU.pth  MLP.pth  RF.pth  Transformer.pth  x_scale.npy  y_scale.npy
predict_model/: GRU.py  LSTM.py  MLP.py  Transformer.py  __init__.py  bayesiannet.py  customized_model.py  model_basic.py  randomforest.py
utils/: help_functions.py  interfaces.py  output_data.py
