[project]
name = "foshan-ai"
version = "0.1.0"
description = "佛山AI项目 - 数据中心智能优化系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ===== 核心数据处理库 =====
    "numpy>=1.24.0,<2.4.0",          # 数值计算基础库，用于数据处理和模型计算
    "pandas>=2.0.0,<2.4.0",          # 数据分析和处理，用于时序数据操作

    # ===== 数据库连接 =====
    "influxdb>=5.3.2,<6.0.0",        # InfluxDB时序数据库客户端，用于数据存储和查询

    # ===== 配置文件处理 =====
    "PyYAML>=6.0,<7.0",              # YAML配置文件解析，用于configs.yaml和oa_args.yaml

    # ===== 机器学习框架 =====
    "torch>=2.0.0,<2.5.0",          # PyTorch深度学习框架，用于MLP、GRU、LSTM、Transformer模型
    "torchvision>=0.15.0,<0.20.0",  # PyTorch视觉库（torch依赖）
    "scikit-learn>=1.3.0,<1.6.0",   # 机器学习库，用于RandomForest、GaussianProcess等模型
    "joblib>=1.3.0,<1.5.0",         # 模型序列化，sklearn依赖

    # ===== 深度强化学习 =====
    "stable-baselines3>=2.0.0,<3.0.0",  # 强化学习算法库，用于DQN、PPO、DDPG、SAC
    "gymnasium>=0.28.0,<1.0.0",     # 强化学习环境接口（stable-baselines3依赖）

    # ===== 优化算法 =====
    "scipy>=1.10.0,<1.15.0",        # 科学计算库，用于模拟退火、遗传算法、梯度下降
    "bayesian-optimization>=1.4.0,<2.0.0",  # 贝叶斯优化算法

    # ===== 通信协议 =====
    "paho-mqtt>=1.6.0,<2.0.0",      # MQTT客户端，用于设备通信
    "requests>=2.28.0,<3.0.0",      # HTTP请求库，用于API通信

    # ===== 进度显示 =====
    "tqdm>=4.64.0,<5.0.0",          # 进度条显示，用于训练过程可视化
]

[project.optional-dependencies]
# 开发和调试工具（可选）
dev = [
    "ipython>=8.0.0,<9.0.0",        # 交互式Python环境
    "jupyter>=1.0.0,<2.0.0",        # Jupyter Notebook
    "matplotlib>=3.6.0,<4.0.0",     # 数据可视化
    "seaborn>=0.12.0,<1.0.0",       # 统计数据可视化
]

# GPU支持（可选）
gpu = [
    # 注意：GPU版本的PyTorch需要特殊安装命令
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
